# Document-Intelligence-Refinery

./: .dockerignore  .dvcignore  .gitignore  DOMAIN_NOTES.md  Dockerfile  README.md  data.dvc  docker-compose.yml  explainer.md  format.ps1  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  copilot-instructions.md
.refinery/: deduplication_log.jsonl  extraction_ledger.jsonl  facts.db
.refinery/chunks/: 2013-E.C-Audit-finding-information_chunks.json  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF_chunks.json  CBE Annual Report 2012-13_chunks.json  CBE Annual Report 2017-18_chunks.json  Consumer Price Index March 2025_chunks.json  Security_Vulnerability_Disclosure_Standard_Procedure_1_chunks.json  index.json
.refinery/extracted/: 2013-E.C-Audit-finding-information.json  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF.json  CBE Annual Report 2012-13.json  Consumer Price Index March 2025.json  Security_Vulnerability_Disclosure_Standard_Procedure_1.json
.refinery/pageindex/: 2013-E.C-Audit-finding-information_pageindex.json  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF_pageindex.json  CBE Annual Report 2012-13_pageindex.json  Consumer Price Index March 2025_pageindex.json  Security_Vulnerability_Disclosure_Standard_Procedure_1_pageindex.json  global_pageindex.json  global_summaries.csv
.refinery/profiles/: 2013-E.C-Assigned-regular-budget-and-expense.json  2013-E.C-Audit-finding-information.json  2013-E.C-Procurement-information.json  2018_Audited_Financial_Statement_Report.json  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF.json  2019_Audited_Financial_Statement_Report.json  2020_Audited_Financial_Statement_Report.json  2021_Audited_Financial_Statement_Report.json  2022_Audited_Financial_Statement_Report.json  Annual_Report_JUNE-2017.json  Annual_Report_JUNE-2018.json  Annual_Report_JUNE-2019.json  Annual_Report_JUNE-2020.json  Annual_Report_JUNE-2021.json  Annual_Report_JUNE-2022.json  Annual_Report_JUNE-2023.json  Audit Report - 2023.json  CBE ANNUAL REPORT 2023-24.json  CBE Annual Report 2006-7 .json  CBE Annual Report 2008-9 .json  CBE Annual Report 2009-10.json  CBE Annual Report 2010-11.json  CBE Annual Report 2011-12.json  CBE Annual Report 2012-13.json  CBE Annual Report 2013-14.json  CBE Annual Report 2014-15.json  CBE Annual Report 2015-16.json  CBE Annual Report 2016-17.json  CBE Annual Report 2017-18.json  CBE Annual Report 2018-19.json  Company_Profile_2024_25.json  Consumer Price Index August 2025.json  Consumer Price Index July 2025.json  Consumer Price Index June 2025.json  Consumer Price Index March 2025.json  Consumer Price Index May 2025.json  Consumer Price Index September 2025.json  Consumer Price Index, April 2025.json  ETHIO_RE_AT_A_GLANCE_2023_24.json  ETHSWITCH-Annual-Report-202122.json  (+8 more)
rubric/: extraction_rules.yaml
src/: api.py
src/agents/: audit_agent.py  chunkr.py  extract_docs.py  extractor.py  extractor_rubric_config.py  fact_extractor.py  indexer.py  query_agent.py  triage.py  vector_ingestor.py
src/models/: models.py
src/strategies/: fasttext_extractor.py  layout_extractor.py  vision_extractor.py
src/utils/: extraction_quality.py  preprocessor.py
tests/: test_dummy.py  test_extraction.py  test_triage.py
