# pyproject.toml

[project]
name = "doc-intelligence-refinery"
version = "0.1.0"
description = "Document Intelligence Refinery pipeline for multi-strategy PDF parsing and extraction" 
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=25.12.0",
    "chromadb>=1.5.2",
    "debugpy>=1.8.20",
    "docker>=7.1.0",
    "doclayout-yolo>=0.0.4",
    "docling>=2.76.0",
    "dvc>=3.65.0",
    "faiss-cpu>=1.13.2",
    "flake8>=7.3.0",
    "huggingface>=0.0.1",
    "huggingface-hub>=0.36.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "isort>=8.0.1",
    "jupyter>=1.1.1",
    "jupyter-client>=8.8.0",
    "langgraph>=1.0.10",
    "llama-index>=0.14.15",
    "marker>=2.1.3",
    "matplotlib>=3.10.8",
    "mermaid-py>=0.8.3",
    "mineru>=2.7.6",
    "opencv-python>=4.13.0.92",
    "openrouter>=0.7.11",
    "pageindex>=0.2.6",
    "pandas>=2.3.3",
    "pathspec==0.12.1",
    "pdfplumber>=0.11.9",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "pytest>=9.0.2",
    "pyzmq>=27.1.0",
    "seaborn>=0.13.2",
    "sqlite-utils>=3.39",
    "tornado>=6.5.4",
    "traitlets>=5.14.3",
    "ultralytics>=8.4.21",
]


[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
skip = [".venv"]

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503", "E402"]
exclude = [".venv", "venv", "env"]

[tool.yamllint]
extends = "default"

[tool.yamllint.rules.truthy]
level = "warning"
allowed-values = ["true", "false"]


[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]

