# pyproject.toml

[project]
name = "doc-intelligence-refinery"
version = "0.1.0"
description = "Document Intelligence Refinery pipeline for multi-strategy PDF parsing and extraction" 
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "black[jupyter]>=25.12.0",
    "chromadb>=1.5.2",
    "datasets>=4.6.1",
    "debugpy>=1.8.20",
    "docker>=7.1.0",
    "doclayout-yolo>=0.0.4",
    "docling>=2.76.0",
    "dvc>=3.65.0",
    "faiss-cpu>=1.13.2",
    "flake8>=7.3.0",
    "huggingface>=0.0.1",
    "huggingface-hub==0.36.2",
    "install",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "isort>=8.0.1",
    "jupyter>=1.1.1",
    "jupyter-client>=8.8.0",
    "langgraph>=1.0.10",
    "llama-index>=0.14.15",
    "marker>=2.1.3",
    "matplotlib>=3.10.8",
    "mermaid-py>=0.8.3",
    "mineru>=2.7.6",
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "openrouter>=0.7.11",
    "pageindex>=0.2.6",
    "pandas>=2.3.3",
    "pathspec==0.12.1",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pre-commit>=4.5.1",
    "protobuf>=6.33.5",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "pytesseract",
    "pytest>=9.0.2",
    "pyzmq>=27.1.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "sqlite-utils>=3.39",
    "tokenizers==0.20.0",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "torchvision==0.19.1",
    "tornado>=6.5.4",
    "traitlets>=5.14.3",
    "transformers==4.45.1",
    "typer==0.21.1",
    "ultralytics>=8.4.21",
]


[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
skip = [".venv"]

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503", "E402"]
exclude = [".venv", "venv", "env"]

[tool.yamllint]
extends = "default"

[tool.yamllint.rules.truthy]
level = "warning"
allowed-values = ["true", "false"]


[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]
